--- a/provision/roles/php7/tasks/configure.yml
+++ b/provision/roles/php7/tasks/configure.yml
@@ -29,7 +29,7 @@
 - name: Configure PHP Xdebug
   template:
     src: xdebug.ini.j2
-    dest: /etc/php.d/xdebug.ini
+    dest: /etc/php.d/15-xdebug.ini
     mode: 0644
     owner: root
     group: root
